# thunar-repairer-plugin

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac.in
po/: POTFILES.in
thunar-fnr/: Makefile.am  thunar-action-menu.c  thunar-action-menu.h  thunar-fnr-plugin.c  thunar-fnr-provider.c  thunar-fnr-provider.h
